fixed backdrop issues on ios

--- a/style.css
+++ b/style.css
@@ -252,7 +252,8 @@ header .scroll-prompt:hover {
         width: 80%;
         margin-top: 10%;
     }
-    section.content-section {
+    section.content-section,
+    section.content-section:nth-child(even) {
         color: rgba(245, 245, 245, 0.637);
         text-shadow: 2px 2px 2px rgba(245, 245, 245, 0.233);
         display: grid;
